# Sky-Astroman

./: .dockerignore  .env.example  .env.local.example  README.md  claude.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json
apps/research/: .env.example  Dockerfile  README.md  pyproject.toml
apps/research/outputs/example-signal-quality/: SUMMARY.md  decision-heuristic-score-buckets.csv  decision-rows.csv  decision-score-buckets.csv  feature-distributions.csv  fee-sensitivity.csv  slippage-sensitivity.csv
apps/research/src/research/: __init__.py  __main__.py  config.py  signal_quality.py
apps/trader/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/trader/src/: httpServer.ts  index.ts  runtime.ts
apps/web/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: dashboard-view.tsx  dashboard.tsx
apps/web/lib/: dashboard-server.ts  dashboard-types.ts  runtime.ts
docs/: deployment.md  validation-and-operations.md
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/gallery/: page.tsx
src/app/login/: page.tsx
src/contexts/: LanguageContext.tsx
src/lib/: astronomy.ts  badge-check.ts  constants.ts  daily-challenge.ts  gamification.ts  i18n.ts  missions.ts  skyScore.ts  types.ts  weather.ts
src/scripts/: seed-missions.ts
supabase-migrations/: 001_user_badges.sql
(+64 files in other folders)
